# dingobot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  bot.py  cli.py  deploy.sh  eurovision.py  generate_name_rule_blank.py  namegen.py  pyproject.toml  samconfig.toml  template.yaml
dingobot/: namegen.py
src/: app.py  cli.py
src/dingobot/: etymology.py  eurovision.py  namegen.py
tests/: test_app.py  test_etymology.py  test_eurovision.py  test_names.py
